--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@thegetty/quire-11ty",
-  "version": "1.0.0-rc.10",
+  "version": "1.0.0-rc.12",
   "description": "Quire 11ty static site generator",
   "keywords": [
     "11ty",
@@ -32,6 +32,7 @@
     "lint:fix": "npm run lint -- --fix",
     "prebuild": "npm run clean",
     "predev": "del-cli public",
+    "prepublishOnly": "npm run test",
     "preserve": "npm run clean",
     "serve": "cross-env ELEVENTY_ENV=production eleventy --serve",
     "test": "node --test"
@@ -102,5 +103,8 @@
     "~layouts": "./_layouts",
     "~lib": "./_lib",
     "~plugins": "./_plugins"
+  },
+  "engines": {
+    "node": ">=18.16"
   }
 }
