--- a/content/_data/figures.yaml
+++ b/content/_data/figures.yaml
@@ -1484,7 +1484,7 @@ figure_list:
     label: "Figure 28.1"
     caption: "Adhesive meshes with square and more recent honeycomb structures."
     credit: "Image: Mona Konietzny"
-    alt: "A magnified view of adhesive meshes showing a square pattern (top); a honeycomb pattern (bottom); and further magnification of the honeycomb pattern (right)."
+    alt: "A magnified view of adhesive meshes showing a square pattern, top, a honeycomb pattern, bottom, and further magnification of the honeycomb pattern, right."
 
   - id: "fig-28-2"
     src: "figures/fig-28-2.jpg"
@@ -1516,7 +1516,7 @@ figure_list:
     label: "Figure 28.5"
     caption: "Activation and application of adhesive meshes for readily accessible bonding surfaces (strip-lining with sandwich of nonwoven polyester and adhesive mesh)."
     credit: "Image: Mona Konietzny"
-    alt: "Illustrations demonstrating the four steps of the bonding process: spraying water on the meshes and strips; covering them; applying them to each side of the canvas; and, lastly, adding weight on top."
+    alt: "Illustrations demonstrating the four steps of the bonding process. 1, spraying water on the meshes and strips. 2, covering them. 3, applying them to each side of the canvas. And four, adding weight on top."
 
   - id: "fig-28-6"
     src: "figures/fig-28-6.jpg"
@@ -1558,7 +1558,7 @@ figure_list:
     label: "Figure 29.2"
     caption: "Maximum tensile forces (Fmax [N]) of uniaxially tested canvas strips with bonds. BJ: butt joint, BJ+BR: butt joint with bridging thread, OV: simple overlap joints, OV+IN: overlap joints with intermingled fibers of the thread ends."
     credit: "Image: Hannah Flock, 2019"
-    alt: "A vertical bar graph showing the average maximum tensile force (N) of each of the four bonding techniques, using each of the four adhesives. The graph includes both a low and high average measured value of N for every bonding technique."
+    alt: "A vertical bar graph showing the average maximum tensile force, labeled as N, of each of the four bonding techniques, using each of the four adhesives. The graph includes both a low and high average measured value of N for every bonding technique."
 
   - id: "fig-29-3"
     src: "figures/fig-29-3.png"
@@ -1566,7 +1566,7 @@ figure_list:
     label: "Figure 29.3"
     caption: "Coefficients of variation (CV of Fmax [%]) of uniaxially tested canvas strips with bonds. BJ: butt joint, BJ+BR: butt joint with bridging thread, OV: simple overlap joints, OV+IN: overlap joints with intermingled fibers of the thread ends."
     credit: "Image: Hannah Flock, 2019"
-    alt: "A vertical bar graph with the same X-axis as Figure 29.2 but now showing each adherent-treatment pair’s variation coefficient of Fmax as a percentage."
+    alt: "A vertical bar graph with the same X-axis as Figure 29.2 but now showing each adherent-treatment pair’s variation coefficient of F max as a percentage."
 
   - id: "fig-29-4"
     src: "figures/fig-29-4.png"
@@ -1574,7 +1574,7 @@ figure_list:
     label: "Figure 29.4"
     caption: "Butt joints with different adhesives: F<sub>max</sub> N of uniaxially tested canvas strips with bonds. The lowest and highest mean values of the different adhesives and bonding techniques from all test series until 2019 are presented."
     credit: "Image: Hannah Flock, 2019"
-    alt: "A vertical bar graph showing the average maximum tensile force (N) of butt joints with four different adhesives. Each adhesive has two measurements, showing the lowest and highest mean values."
+    alt: "A vertical bar graph showing the average maximum tensile force, labeled as N, of butt joints with four different adhesives. Each adhesive has two measurements, showing the lowest and highest mean values."
 
   - id: "fig-29-5"
     src: "figures/fig-29-5.png"
@@ -1582,7 +1582,7 @@ figure_list:
     label: "Figure 29.5"
     caption: "Butt joints with sturgeon glue–cellulose fiber mixtures: F<sub>max</sub> [N] of uniaxially tested canvas strips with bonds."
     credit: "Image: Hannah Flock, 2019"
-    alt: "A vertical bar graph showing the average maximum tensile force (N) of butt joints using five different lengths of Arbocel cellulose fibers combined with 25% sturgeon-glue solution."
+    alt: "A vertical bar graph showing the average maximum tensile force, labeled as N, of butt joints using five different lengths of Arbocel cellulose fibers combined with 25 percent sturgeon-glue solution."
 
   - id: "fig-29-6"
     src: "figures/fig-29-6.jpg"
@@ -1614,7 +1614,7 @@ figure_list:
     label: "Figure 30.2"
     caption: "Modification of Heiber’s work stretcher attachment to maintain tacking margins without flattening. (a) Diagram illustrating the process of modification. (b) Detail of a painting attached to a work stretcher using this modified method. Since the tension is equilibrial, the tacking margins will remain at a right angle (see figs. 30.2 [a] and 30.3 [b])."
     credit: "Image: Robert Proctor"
-    alt: "(a) A drawing showing the three-step process of attaching a painting to a particular type of work stretcher using wooden blocks and nylon straps. (b) A photo showing the final result of attaching a painting’s tacking margins to this type of work stretcher."
+    alt: "Image labeled A is a drawing showing the three-step process of attaching a painting to a particular type of work stretcher using wooden blocks and nylon straps. Image labeled B is a photo showing the final result of attaching a painting’s tacking margins to this type of work stretcher."
 
   - id: "fig-30-3"
     src: "figures/fig-30-3.jpg"
@@ -1622,7 +1622,7 @@ figure_list:
     label: "Figure 30.3"
     caption: "Examples of different methods of suspending a painting in a work stretcher while maintaining the tacking margins without flattening. (a) Painting in a standard stretcher with tacking margins preserved using bulldog clips. (b) Painting suspended in a new stretcher to allow access only to the lower edge of the painting; note the clamping and mending plates from the reverse. A stretcher can be assembled to “hug” the three unaffected sides—either clamped together or held with mending plates (see b). &#40;c) Mock-up illustrating how to attach Hollytex and tape to suspend the painting in the stretcher."
     credit: "Image: Robert Proctor"
-    alt: "(a) View underneath of a painting held by a standard wooden stretcher showing tacking margins held by numerous bulldog clips. (b) View underneath a stretcher holding a painting using clamps and a mending plate, with space to access the lower part of the painting. (c) A mock-up showing the placement of various elements placed on top of one another, including Hollytex, mat board, beva film, and package tape."
+    alt: "Image labeled A is a view underneath of a painting held by a standard wooden stretcher showing tacking margins held by numerous bulldog clips. Image b shows a view underneath a stretcher holding a painting using clamps and a mending plate, with space to access the lower part of the painting. Image C is a mock-up showing the placement of various elements placed on top of one another, including Hollytex, mat board, beva film, and package tape."
 
   - id: "fig-30-4"
     src: "figures/fig-30-4.jpg"
@@ -1638,7 +1638,7 @@ figure_list:
     label: "Figure 30.5"
     caption: "Setup for technique with watch glass to set down cupped paint. (a) Detail of glass with twill tape for manipulating placement. (b) The author setting down paint with hot air and a silicone shaper using this watch glass support setup under the painting."
     credit: "Image: Whitten & Proctor Fine Art Conservation"
-    alt: "(a) A large piece of board laid out on a table with two lengths of tape adhered to it vertically and horizontally. Underneath the point where the strips of tape intersect is a piece of glass with Mylar placed over it; there is also a detail of this intersection. (b) A man with a headlamp hunched over a painting that is placed on the surface of the board with attached glass from (a). He carefully works on the painting using a device that supplies hot air in one hand and a silicone shaper in his other."
+    alt: "Image A shows a large piece of board laid out on a table with two lengths of tape adhered to it vertically and horizontally. Underneath the point where the strips of tape intersect is a piece of glass with Mylar placed over it; there is also a detail of this intersection. Image B shows a man with a headlamp hunched over a painting that is placed on the surface of the board with the attached glass from image A. He carefully works on the painting using a device that supplies hot air in one hand and a silicone shaper in his other."
 
   - id: "fig-30-6"
     src: "figures/fig-30-6.png"
@@ -1646,7 +1646,7 @@ figure_list:
     label: "Figure 30.6"
     caption: "Final step in watch glass support setup. (a) Detail of the reptile warming mat over recently consolidated area. (b) Detail under raking light before treatment of an area treated using this method. &#40;c) Detail under raking light of same area after consolidation treatment and relaxation of paint using this watch glass support setup."
     credit: "Image: Whitten & Proctor Fine Art Conservation"
-    alt: "(a) A rectangular reptile warming mat with a sandbag on top of it lies on a small part of a painting. (b) A detail of canvas that has visible ridges and bumps on it, with a reference color palette and ruler below it. (c) The same canvas but now with the ridges and imperfections in the canvas smoothed out."
+    alt: "Image A shows a rectangular reptile warming mat with a sandbag on top of it lies on a small part of a painting. Image B shows a detail of canvas that has visible ridges and bumps on it, with a reference color palette and ruler below it. Image C appears like the canvas from B but it now has the ridges and imperfections in the canvas smoothed out."
 
   - id: "fig-30-7"
     src: "figures/fig-30-7.jpg"
@@ -1654,7 +1654,7 @@ figure_list:
     label: "Figure 30.7"
     caption: "Various views of suction platen designed by the author. The platen can attach to a tripod like the one shown at right for ease of placement and alignment on the reverse of the canvas."
     credit: "Image: Whitten & Proctor Fine Art Conservation"
-    alt: "(Left) Three views (top, side, and bottom) of a suction platen, a device comprised of a metal plate with a suction device and clamp attached to its rear. (Right) A tripod with its arm attached to the rear of the suction platen. There is also a pipe-like device attached to the suction device on the back of the suction platen that extends downward."
+    alt: "The left image shows three views, top, side, and bottom, of a suction platen, which is a device comprised of a metal plate with a suction device and clamp attached to its rear. The right image shows a tripod with its arm attached to the rear of the suction platen. There is also a pipe-like device attached to the suction device on the back of the suction platen that extends downward."
 
   - id: "fig-30-8"
     src: "figures/fig-30-8.png"
@@ -1662,7 +1662,7 @@ figure_list:
     label: "Figure 30.8"
     caption: "(a) Example of a setup using aluminum edging on a stretcher and minimal floss/thread attachments to close the gap in an existing tear on a canvas. Note the mending plate (circled in red) used to anchor to the crossbar of the stretcher when only one thread was required for tensioning. (b) Mock-up of possible tensioning mechanisms of screws and pushpins with clamped attachment to stretcher."
     credit: "Image: Robert Proctor"
-    alt: "(a) A rear view of a painting on canvas attached to a stretcher. An aluminum corner brace attaches the stretcher to the canvas surrounded by blue tape, which is circled. (b) A wooden beam of a stretcher held together by two clamps, embedded with numerous screws and pushpins."
+    alt: "Image A is a rear view of a painting on canvas attached to a stretcher. An aluminum corner brace attaches the stretcher to the canvas surrounded by blue tape, which is circled. Image B is a wooden beam of a stretcher held together by two clamps, embedded with numerous screws and pushpins."
 
   - id: "fig-30-9"
     src: "figures/fig-30-9.jpg"
@@ -1678,7 +1678,7 @@ figure_list:
     label: "Figure 30.10"
     caption: "Details at the tear site after retensioning showing the progression of filling and stabilization. (a) Front before filling. (b) Front after filling. &#40;c) Reverse with fill in voids. (d) Reverse after Stabiltex with Beva has been applied."
     credit: "Image: Whitten & Proctor Fine Art Conservation"
-    alt: "Four images of a tear in canvas showing the progression of treatment from (a) a front view of the original tear, (b) a front view of the tear filled with white material, (c) a reverse view of the filled-in tear, and (d) the reverse view of the canvas, with the tear in the canvas now mended and covered with a mesh fabric."
+    alt: "Four images of a tear in canvas showing the progression of treatment from image A, which is a front view of the original tear, image B, which is a front view of the tear filled with white material, image C, which is a reverse view of the filled-in tear, and lastly image D, which is the reverse view of the canvas, with the tear in the canvas now mended and covered with a mesh fabric."
 
   - id: "fig-30-11"
     src: "figures/fig-30-11.jpg"
@@ -1686,7 +1686,7 @@ figure_list:
     label: "Figure 30.11"
     caption: "Comparison of details at the tear site before treatment (top) and after (bottom)."
     credit: "Image: Whitten & Proctor Fine Art Conservation"
-    alt: "A tear in the front side of canvas showing a small hole and other ruptures (top), and the same spot of canvas now mended with abrasion marks barely visible (bottom)."
+    alt: "A tear in the front side of canvas showing a small hole and other ruptures, top, and the same spot of canvas now mended with abrasion marks barely visible, bottom."
 
   - id: "fig-31-1"
     src: "figures/fig-31-1.jpg"
